2010-09-28  Nat Duca  <nduca@chromium.org>

Reviewed by James Robinson.

        [chromium] invalidateRootLayerRect needs to schedule compositor
        https://bugs.webkit.org/show_bug.cgi?id=46219

        Update comments on LayerChromium commit/display functions to clarify
        their limitations. Remove unused dirtying logic from
        LayerRendererChromium.

        * platform/graphics/chromium/LayerChromium.cpp:
        (WebCore::LayerChromium::setNeedsCommit):
        (WebCore::LayerChromium::setNeedsDisplay):
        * platform/graphics/chromium/LayerRendererChromium.cpp:
        (WebCore::LayerRendererChromium::LayerRendererChromium):
        (WebCore::LayerRendererChromium::present):
        * platform/graphics/chromium/LayerRendererChromium.h:
2010-09-28  Nat Duca  <nduca@chromium.org>

        Reviewed by James Robinson.

        [chromium] invalidateRootLayerRect needs to schedule compositor
        https://bugs.webkit.org/show_bug.cgi?id=46219

        Make sure setRootLayerNedsDisplay is called by root invalidation.
        To avoid confusion about root-layer versus non-root-layer
        behavior, move the root layer damage state to the WebView.

        * src/WebViewImpl.cpp:
        (WebKit::WebViewImpl::setRootLayerNeedsDisplay):
        (WebKit::WebViewImpl::scrollRootLayerRect):
        (WebKit::WebViewImpl::invalidateRootLayerRect):
        (WebKit::WebViewImpl::doComposite):
        * src/WebViewImpl.h:

Canonical link: https://commits.webkit.org/59268@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@68604 268f45cc-cd09-0410-ab3c-d52691b4dbfc