WebKit/chromium/src/WebViewImpl.cpp
@@ -2201,8 +2201,6 @@ void WebViewImpl::setRootGraphicsLayer(WebCore::PlatformLayer* layer)
 
 void WebViewImpl::setRootLayerNeedsDisplay()
 {
-    if (m_layerRenderer)
-        m_layerRenderer->setNeedsDisplay();
     m_client->scheduleComposite();
     // FIXME: To avoid breaking the downstream Chrome render_widget while downstream
     // changes land, we also have to pass a 1x1 invalidate up to the client
@@ -2242,7 +2240,7 @@ void WebViewImpl::scrollRootLayerRect(const IntSize& scrollDelta, const IntRect&
     // rects allows us to intermix invalidates with scrolls.
     IntRect damagedContentsRect;
     if (scrollDelta.width()) {
-        float dx = static_cast<float>(scrollDelta.width());
+        int dx = scrollDelta.width();
         damagedContentsRect.setY(contentRect.y());
         damagedContentsRect.setHeight(contentRect.height());
         if (dx > 0) {
@@ -2253,7 +2251,7 @@ void WebViewImpl::scrollRootLayerRect(const IntSize& scrollDelta, const IntRect&
             damagedContentsRect.setWidth(-dx);
         }
     } else {
-        float dy = static_cast<float>(scrollDelta.height());
+        int dy = scrollDelta.height();
         damagedContentsRect.setX(contentRect.x());
         damagedContentsRect.setWidth(contentRect.width());
         if (dy > 0) {
@@ -2265,7 +2263,7 @@ void WebViewImpl::scrollRootLayerRect(const IntSize& scrollDelta, const IntRect&
         }
     }
 
-    m_scrollDamage.unite(damagedContentsRect);
+    m_rootLayerScrollDamage.unite(damagedContentsRect);
     setRootLayerNeedsDisplay();
 }
 
@@ -2284,10 +2282,12 @@ void WebViewImpl::invalidateRootLayerRect(const IntRect& rect)
 
     // rect is in viewport space. Convert to content space
     // so that invalidations and scroll invalidations play well with one-another.
-    FloatRect contentRect = view->windowToContents(rect);
+    IntRect contentRect = view->windowToContents(rect);
 
-    // FIXME: add a smarter damage aggregation logic? Right now, LayerChromium does simple union-ing.
-    m_layerRenderer->rootLayer()->setNeedsDisplay(contentRect);
+    // FIXME: add a smarter damage aggregation logic and/or unify with 
+    // LayerChromium's damage logic
+    m_rootLayerDirtyRect.unite(contentRect);
+    setRootLayerNeedsDisplay();
 }
 
 
@@ -2388,14 +2388,14 @@ void WebViewImpl::doComposite()
     m_layerRenderer->prepareToDrawLayers(visibleRect, contentRect, IntPoint(view->scrollX(), view->scrollY()));
 
     // Draw the contents of the root layer.
-    Vector<FloatRect> damageRects;
-    damageRects.append(m_scrollDamage);
-    damageRects.append(m_layerRenderer->rootLayer()->dirtyRect());
+    Vector<IntRect> damageRects;
+    damageRects.append(m_rootLayerScrollDamage);
+    damageRects.append(m_rootLayerDirtyRect);
     for (size_t i = 0; i < damageRects.size(); ++i) {
         // The damage rect for the root layer is in content space [e.g. unscrolled].
         // Convert from content space to viewPort space.
-        const FloatRect damagedContentRect = damageRects[i];
-        IntRect damagedRect = view->contentsToWindow(IntRect(damagedContentRect));
+        const IntRect damagedContentRect = damageRects[i];
+        IntRect damagedRect = view->contentsToWindow(damagedContentRect);
 
         // Intersect this rectangle with the viewPort.
         damagedRect.intersect(viewPort);
@@ -2406,8 +2406,8 @@ void WebViewImpl::doComposite()
             m_layerRenderer->updateRootLayerTextureRect(damagedRect);
         }
     }
-    m_layerRenderer->rootLayer()->resetNeedsDisplay();
-    m_scrollDamage = WebRect();
+    m_rootLayerDirtyRect = IntRect();
+    m_rootLayerScrollDamage = IntRect();
 
     // Draw the actual layers...
     m_layerRenderer->drawLayers(visibleRect, contentRect);
